--- a/main/book/developers_guide/coding_resources/glossary.html
+++ b/main/book/developers_guide/coding_resources/glossary.html
@@ -37,7 +37,7 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "coal";
-            window.path_to_searchindex_js = "../../searchindex-78c1d72e.js";
+            window.path_to_searchindex_js = "../../searchindex-a1f03dec.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../../toc-b9ef563d.js"></script>
@@ -188,7 +188,7 @@
 <p>RFC: Request for Comments. It is a design proposal, often written before or alongside major changes.</p>
 </li>
 <li>
-<p>Essence: A high level constraint modelling language. Essence is <em>delcarative</em>, i.e. it states the problem rather than how to solve it. It also lets us model things at the class level.</p>
+<p>Essence: A high level constraint modelling language. Essence is <em>declarative</em>, i.e. it states the problem rather than how to solve it. It also lets us model things at the class level.</p>
 <ul>
 <li>
 <p>A class-level model (i.e. description of a problem) may have some parameters. To get from a class-level model to an instance model, we provide concrete values for all the parameters.</p>
