--- a/main/book/developers_guide/contributors_guide/how_we_work.html
+++ b/main/book/developers_guide/contributors_guide/how_we_work.html
@@ -37,7 +37,7 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "coal";
-            window.path_to_searchindex_js = "../../searchindex-78c1d72e.js";
+            window.path_to_searchindex_js = "../../searchindex-a1f03dec.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../../toc-b9ef563d.js"></script>
@@ -183,7 +183,7 @@
 <ul>
 <li><a href="https://en.wikipedia.org/wiki/Good_faith">Assume good faith</a>.</li>
 <li>Take responsibility for your work.</li>
-<li>Look for opportunites to help others.</li>
+<li>Look for opportunities to help others.</li>
 <li>Make it easy for others to help you.</li>
 </ul>
 <h2 id="social-contract"><a class="header" href="#social-contract">Social contract</a></h2>
@@ -217,7 +217,7 @@
 <ul>
 <li>Share your experiences and insights! Use GitHub or Microsoft Teams to share updates, challenges, and breakthroughs with the rest of the team.</li>
 <li>Showing real examples means other can more easily help you, it can help others understand your approach and may inspire new ideas.</li>
-<li>High-level explanations can inadvertantly hide important details. Showing the actual artefact (whether it’s code, a design document or something else) together with your high-level commentary eliminates this risk.</li>
+<li>High-level explanations can inadvertently hide important details. Showing the actual artefact (whether it’s code, a design document or something else) together with your high-level commentary eliminates this risk.</li>
 </ul>
 <h3 id="3-begin-with-specifications"><a class="header" href="#3-begin-with-specifications">3. Begin with Specifications</a></h3>
 <ul>
