--- a/main/book/developers_guide/contributors_guide/index.html
+++ b/main/book/developers_guide/contributors_guide/index.html
@@ -37,7 +37,7 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "coal";
-            window.path_to_searchindex_js = "../../searchindex-78c1d72e.js";
+            window.path_to_searchindex_js = "../../searchindex-a1f03dec.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../../toc-b9ef563d.js"></script>
@@ -195,7 +195,7 @@ created: 24-10-25
 or feature requests can be posted on the <a href="https://github.com/conjure-cp/conjure-oxide/issues">Github issue
 tracker</a>.</p>
 <p>Currently, Conjure Oxide has been primarily developed by students and staff at the <a href="https://www.st-andrews.ac.uk/">University of St Andrews</a>. That being said, we welcome and encourage contributions from individuals outside the University. Over the course of this section, we will expand further into <strong>how</strong> you can contribute.</p>
-<p>For more detailed information reguarding our contributing process, please refer to <a href="https://github.com/conjure-cp/conjure-oxide/blob/main/CONTRIBUTING.md">CONTRIBUTING.md</a></p>
+<p>For more detailed information regarding our contributing process, please refer to <a href="https://github.com/conjure-cp/conjure-oxide/blob/main/CONTRIBUTING.md">CONTRIBUTING.md</a></p>
 <h2 id="licence"><a class="header" href="#licence">Licence</a></h2>
 <p>This project is entirely open-source, with all code released under the <a href="https://www.mozilla.org/en-US/MPL/2.0/">MPL 2.0</a> license, unless stated otherwise.</p>
 <hr>
