--- a/main/book/documentation/LSP/Essence-Error-Catalog-for-LSP-Error-Underlining-implementation.html
+++ b/main/book/documentation/LSP/Essence-Error-Catalog-for-LSP-Error-Underlining-implementation.html
@@ -37,7 +37,7 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "coal";
-            window.path_to_searchindex_js = "../../searchindex-78c1d72e.js";
+            window.path_to_searchindex_js = "../../searchindex-a1f03dec.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../../toc-b9ef563d.js"></script>
@@ -205,7 +205,7 @@ Detection: look for an ERROR node with the invalid token
 Example: <code>@int</code> is not a valid token (ERROR node with <code>@</code>)</p>
 <pre><code class="language-text">find x: @int
 </code></pre>
-<p>Conjur does not identify <code>int</code> at all, just says “Skipped token”, “Missing Domain”
+<p>Conjure does not identify <code>int</code> at all, just says “Skipped token”, “Missing Domain”
 Tree-Sitter in conjure-oxide sees <code>int</code> as a valid token but has an ERROR node with <code>@</code> before.
 So in Conjure the same error as Missing Token but might make sense to separate due to different CST structures.</p>
 <h3 id="5-unclosed-delimiter"><a class="header" href="#5-unclosed-delimiter">5. Unclosed Delimiter</a></h3>
@@ -226,7 +226,7 @@ print x
 <h3 id="7-general-syntax-error"><a class="header" href="#7-general-syntax-error">7. General Syntax Error</a></h3>
 <p>All the other cases that cause an ERROR node in the CST tree.</p>
 <h1 id="semantic-errors"><a class="header" href="#semantic-errors">Semantic Errors</a></h1>
-<p>(Will produce a valid CST and AST, now can only detected at runtime, e.g typecheking)</p>
+<p>(Will produce a valid CST and AST, now can only detected at runtime, e.g type checking)</p>
 <h3 id="1-keywords-as-identifiers"><a class="header" href="#1-keywords-as-identifiers">1. Keywords as Identifiers</a></h3>
 <p>Description: token’s name is not allowed<br>Detection: compare the variable names against the set of keywords
 Example: Keyword “bool” used as a variable name</p>
