--- a/main/book/documentation/ProTrace-module.html
+++ b/main/book/documentation/ProTrace-module.html
@@ -37,7 +37,7 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "coal";
-            window.path_to_searchindex_js = "../searchindex-78c1d72e.js";
+            window.path_to_searchindex_js = "../searchindex-a1f03dec.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../toc-b9ef563d.js"></script>
@@ -394,7 +394,7 @@ It formats the trace using its assigned formatter.</p>
 <strong>Json</strong>: Writes JSON output to the JSON file.
 <strong>Both</strong>: Writes to both files using respective formatters (<a href="https://github.com/conjure-cp/conjure-oxide/wiki/ProTrace-module/_edit#human-formatter">HumanFormatter</a> and <a href="https://github.com/conjure-cp/conjure-oxide/wiki/ProTrace-module/_edit#json-formatter">JsonFormatter</a> directly).</p>
 <h2 id="both-consumer"><a class="header" href="#both-consumer">Both Consumer</a></h2>
-<p>A <code>BothConsumer </code>sends the formatted trace data to both:</p>
+<p>A <code>BothConsumer</code>sends the formatted trace data to both:</p>
 <ul>
 <li>Standard output (via an internal <a href="https://github.com/conjure-cp/conjure-oxide/wiki/ProTrace-module/_edit#stdout-consumer">StdoutConsumer</a>)</li>
 <li>Files (via an internal <a href="https://github.com/conjure-cp/conjure-oxide/wiki/ProTrace-module/_edit#file-consumer">FileConsumer</a>)</li>
@@ -413,7 +413,7 @@ It formats the trace using its assigned formatter.</p>
 <p>If users would like to only see specific rules or rule sets during rule application tracing, rule filters can be applied using the command-line argument <code>--filter-rule-name</code> or <code>--filter-rule-set</code> followed by comma-separated rule names or sets. The output will only show rules that is <strong>in the rule filters</strong>, otherwise the rule application will be completely skipped. This feature was added for the abstraction of unimportant rule applications during tracing, allowing users to only see the rules they require.</p>
 <p>When both rule name and rule set filters are used in tandem, any rules that pass either the rule name or the rule set filter will be displayed. For example, if the rule name filter is <code>normalise_associative_commutative</code> and the rule set filter is <code>Minion</code>, any rule that has the rule name <code>normalise_associative_commutative</code> or is in the rule set <code>Minion</code> will be displayed.</p>
 <p>Rule filters will be applied to both <a href="https://github.com/conjure-cp/conjure-oxide/wiki/ProTrace-module/_edit#file-consumer">FileConsumer</a> and <a href="https://github.com/conjure-cp/conjure-oxide/wiki/ProTrace-module/_edit#stdout-consumer">StdoutConsumer</a>.</p>
-<p>Rule filters can alse be hard-coded into the program or accessed using the following functions:</p>
+<p>Rule filters can also be hard-coded into the program or accessed using the following functions:</p>
 <pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>pub fn set_rule_filter(rule_name: Option&lt;Vec&lt;String&gt;&gt;)
@@ -478,7 +478,8 @@ fn display_message(message: String, file_path: Option&lt;String&gt;, kind: Kind)
 <pre><code>--filter-rule-name &lt;RULE_NAME_FILTER&gt;
 </code></pre>
 <p>Filter rule trace to only show given rule set names (comma separated)</p>
-<pre><code>--filter-rule-set &lt;RULE_SET_FILTER&gt;</code></pre>
+<pre><code>--filter-rule-set &lt;RULE_SET_FILTER&gt;
+</code></pre>
 
                     </main>
 
