--- a/main/book/getting_started/functional-rust.html
+++ b/main/book/getting_started/functional-rust.html
@@ -37,7 +37,7 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "coal";
-            window.path_to_searchindex_js = "../searchindex-78c1d72e.js";
+            window.path_to_searchindex_js = "../searchindex-a1f03dec.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../toc-b9ef563d.js"></script>
@@ -268,7 +268,7 @@ public void fnReturnsError(a,b) {
 <p>This is because, at their core, all functions are essentially of the type (..) -&gt; ReturnType. Making the return type standard allows for all functions to be of similar types. <a href="#fr-4-1">↩</a></p>
 </li>
 <li id="footnote-5">
-<p>Which immediately propogates the error up through the call stack in rust. <a href="#fr-5-1">↩</a></p>
+<p>Which immediately propagates the error up through the call stack in rust. <a href="#fr-5-1">↩</a></p>
 </li>
 <li id="footnote-6">
 <p>This is what caused the infamous cloudflare outage. <a href="#fr-6-1">↩</a></p>
