--- a/main/book/getting_started/quick-start.html
+++ b/main/book/getting_started/quick-start.html
@@ -37,7 +37,7 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "coal";
-            window.path_to_searchindex_js = "../searchindex-a1f03dec.js";
+            window.path_to_searchindex_js = "../searchindex-a6c29758.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../toc-b9ef563d.js"></script>
@@ -188,7 +188,18 @@ such that x &gt; y
 <p>If you are curious about more complex models, you can check out the models that we use to test Conjure Oxide, available in the <code>tests-integration/tests/integration</code> directory of the repository.</p>
 <h2 id="running-with-different-solvers"><a class="header" href="#running-with-different-solvers">Running with Different Solvers</a></h2>
 <h3 id="sat-solver"><a class="header" href="#sat-solver">SAT Solver</a></h3>
+<p><code>--sat-encoding</code> specifies the encoding strategy used by the SAT solver. This affects performance and solution structure.</p>
+<p>Supported options:</p>
+<ul>
+<li><code>log</code> (default)</li>
+<li><code>direct</code></li>
+<li><code>order</code></li>
+</ul>
+<p>Default usage (uses <code>log</code>):</p>
 <pre><code class="language-bash">cargo run -- solve --solver sat my_problem.essence
+</code></pre>
+<p>Specify an encoding:</p>
+<pre><code class="language-bash">cargo run -- solve --solver sat --sat-encoding direct my_problem.essence
 </code></pre>
 <blockquote class="blockquote-tag blockquote-tag-warning">
 <p class="blockquote-tag-title"><svg viewbox="0 0 16 16" width="18" height="18"><path d="M6.457 1.047c.659-1.234 2.427-1.234 3.086 0l6.082 11.378A1.75 1.75 0 0 1 14.082 15H1.918a1.75 1.75 0 0 1-1.543-2.575Zm1.763.707a.25.25 0 0 0-.44 0L1.698 13.132a.25.25 0 0 0 .22.368h12.164a.25.25 0 0 0 .22-.368Zm.53 3.996v2.5a.75.75 0 0 1-1.5 0v-2.5a.75.75 0 0 1 1.5 0ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"></path></svg>Warning</p>
